<resources>
    <string name="app_name">Quiz sobre Sistemas Operacionais</string>
    <string name="q1">1- O que é um processo?</string>
    <string name="q1a">A- Programa em execução</string>
    <string name="q1b">B- Algoritmo codificado</string>
    <string name="q1c">C- Uma ação na justiça</string>
    <string name="q1d">D- Nenhuma das alternativas</string>
    <string name="q2">2- Escalonador de processo é:</string>
    <string name="q2a">A- Definidor de escalas</string>
    <string name="q2b">B- capaz de decidir qual processo será executado em determinado momento.</string>
    <string name="q2c">C- capaz de dispachar processo na tabela BCP</string>
    <string name="q2d">D- Nenhuma das alternativas</string>
    <string name="q3">3- Qual é a memória mais rápida?</string>
    <string name="q3a">A- Registradores</string>
    <string name="q3b">B-HD</string>
    <string name="q3c">C- SSD</string>
    <string name="q3d">D- Cache</string>
    <string name="resultado">Resultado</string>
    <string name="pontuacaoFinalLabel">Pontuação Final</string>
    <string name="premio">Prêmio</string>
    <string name="respostaQ3btn">resposta</string>
    <string name="ptosAcumuladoslbl3">Pontos acumulados</string>
    <string name="respostaQ2btn">resposta</string>
    <string name="ptosAcumuladosQ2lbl">Pontos acumulados</string>
    <string name="respostaQ1btn">resposta</string>
    <string name="ptosAcumuladosQ1lbl">Pontos acumulados</string>
</resources>